# evm_reverse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
evmdec/: __init__.py  cfg.py  cli.py  decompiler.py  disassembler.py  fourbyte.py  ir.py  keccak.py  opcodes.py  selectors.py  symbolic.py
scripts/: check_corpus_abi.py  onchain_batch.py  run_corpus.py  verify_abi.py  verify_returns.py  verify_semantics.py  verify_storage.py
tests/: test_cfg.py  test_decompiler.py  test_disassembler.py  test_ir.py  test_onchain_weth.py  test_selectors.py  test_symbolic.py
